# arduino_utils

./: .gitignore  .gitmodules  BatteryManager.cpp  BatteryManager.h  CMakeLists.txt  README.md  ShiftRegister74HC595.cpp  cleanmake.sh  library.json  logger.cpp  logger.h  planForSRAM.md  platformio.ini  sramsetuppins,md
include/: AFMotorLegacyWrapper.h  BatteryManager.h  EEPROM24LC32A.h  HY62252A.h  LCD1602IIC.h  SRAM_I2C.h  SerialRedirect.h  ShiftRegister74HC595.h  logger.h
src/: AFMotorLegacyWrapper.cpp  BatteryManager.cpp  EEPROM24LC32A.cpp  HY62252A.cpp  LCD1602IIC.cpp  SRAM_I2C.cpp  ShiftRegister74HC595.cpp  logger.cpp  main.cpp
test/: test_logger.cpp  test_utilities.h
tests/: test_logger.cpp
